<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh_action"
        android:title="@string/refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <group
        android:checkableBehavior="single"
        android:orderInCategory="2">

        <item
            android:id="@+id/most_popular_action"
            android:title="@string/most_popular"
            android:orderInCategory="1"
            app:showAsAction="never" />

        <item
            android:id="@+id/top_rated_action"
            android:title="@string/top_rated"
            android:orderInCategory="2"
            app:showAsAction="never" />

        <item
            android:id="@+id/favourite_action"
            android:title="@string/favourite"
            android:orderInCategory="3"
            app:showAsAction="never" />

    </group>

</menu>