<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            tools:text="@string/mock_movie_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="@dimen/movie_poster_detail_width"
            android:layout_height="@dimen/movie_poster_detail_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_content_description"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_movie_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            tools:text="@string/mock_movie_year"
            app:layout_constraintLeft_toRightOf="@+id/iv_movie_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

        <TextView
            android:id="@+id/tv_movie_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            tools:text="@string/mock_movie_rate"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_year"
            app:layout_constraintRight_toRightOf="@+id/tv_movie_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_year" />

        <Button
            android:id="@+id/b_favourite"
            style="@style/MovieButtonStyle"
            android:layout_marginTop="8dp"
            tools:text="@string/mock_set_as_favourite"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_rate"
            app:layout_constraintRight_toRightOf="@+id/tv_movie_rate"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_rate" />

        <TextView
            android:id="@+id/tv_movie_synopsis"
            style="@style/LightGrayTextStyle"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:layout_marginBottom="8dp"
            tools:text="@string/mock_movie_synopsis"
            app:layout_constraintLeft_toLeftOf="@+id/iv_movie_poster"
            app:layout_constraintRight_toRightOf="@+id/tv_movie_year"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>