<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="@dimen/user_image_width"
            android:layout_height="@dimen/user_image_width"
            android:background="@drawable/ic_user"
            android:contentDescription="@string/user_image_content_description"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/mock_user_name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            app:layout_constraintLeft_toRightOf="@+id/iv_user"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_user"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user" />

        <TextView
            android:id="@+id/tv_review"
            style="@style/LightGrayTextStyle"
            tools:text="@string/mock_review"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintRight_toRightOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/iv_user"
            app:layout_constraintLeft_toLeftOf="@+id/tv_username"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>